--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
             class="h-100 d-inline-flex align-items-center border-start border-end px-3"
           >
             <small class="fa fa-phone-alt me-2"></small>
-            <small>+52 87-1942-3418</small>
+            <small>+52 871-942-3418</small>
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-envelope-open me-2"></small>
@@ -65,7 +65,7 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Lunes - Viernes: 09 AM - 18 PM</small>
+            <small>Lunes - Viernes: 07 AM - 15 PM</small>
           </div>
         </div>
       </div>
@@ -136,14 +136,14 @@
                 <img class="img-fluid" src="img/team-1.jpg" alt="" />
               </div>
               <div class="col-sm-6">
-                <h3 class="mb-0">Full Name</h3>
-                <p>Head of Sales</p>
-                <h6>Contact Details</h6>
+                <h3 class="mb-0">Lic. Issac Silos</h3>
+                <p>Gerente de Ventas</p>
+                <h6>Contacto</h6>
                 <p>
-                  Lorem ipsum dolor sit amet conse elit sed eiu smod lab ore.
+                  ¿Necesitas una cotización o asesoría personalizada? Contáctanos, será un placer ayudarte.
                 </p>
-                <p class="mb-0">Call: +012 345 6789</p>
-                <p class="mb-0">Email: sales@example.com</p>
+                <p class="mb-0">Call: +52 871-358-3506</p>
+                <p class="mb-0">Email: isilos@sysel.com.mx</p>
               </div>
             </div>
           </div>
@@ -185,7 +185,7 @@
             <div class="border-start border-5 border-primary ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2">Contactanos</h6>
               <h1 class="display-6 mb-0">
-                Si tienes alguna pregunta, por favor contactanos
+                Si tienes alguna pregunta, por favor contáctanos
               </h1>
             </div>
             <form>
@@ -269,7 +269,7 @@
             <p>
               <i class="fa fa-map-marker-alt me-3"></i>Av Allende 6450, San Felipe, Torreón, Coah. C.P. 27085 
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+52 871-9423-418</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+52 871-942-3418</p>
             <p><i class="fa fa-envelope me-3"></i>jtlapanco@sysel.com.mx</p>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -302,13 +302,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-              &copy; SYSEL PACKAGING 2023 |<a href="http://pixelly.online/"> P I X E L L Y</a>, All Right Reserved.
+              &copy; 2025 SYSEL PACKAGING. Todos los derechos reservados.
             </div>
             <div class="col-md-6 text-center text-md-end">
-              Designed By 
-              <a href="https://htmlcodex.com">HTML Codex</a>
-              <br />Distributed By:
-              <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+              Desarrollado por <a href="mailto:mosiah.villarreal2@outlook.com">Mosiah Villarreal</a> | 
+              <a href="https://github.com/VILLA2elferoz" target="_blank">GitHub</a>
             </div>
           </div>
         </div>
