--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>SYSEL PACKAHING</title>
+    <title>SYSEL PACKAGING</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -57,7 +57,7 @@
             class="h-100 d-inline-flex align-items-center border-start border-end px-3"
           >
             <small class="fa fa-phone-alt me-2"></small>
-            <small>+52 87-1942-3418</small>
+            <small>+52 871-942-3418</small>
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-envelope-open me-2"></small>
@@ -65,7 +65,7 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Lunes - Viernes: 09 AM - 18 PM</small>
+            <small>Lunes - Viernes: 07 AM - 15 PM</small>
           </div>
         </div>
       </div>
@@ -121,10 +121,10 @@
                         Caja carton corrugado
                       </li>
                       <li class="breadcrumb-item fs-5 text-light">
-                        materisles de empaque
+                        Materiales de empaque
                       </li>
                       <li class="breadcrumb-item fs-5 text-light">
-                        servicios de empaque
+                        Servicios de empaque
                       </li>
                     </ol>
                     <a href="service.html" class="btn btn-primary py-3 px-5">Ver Servicios</a>
@@ -145,7 +145,7 @@
                     <h1 class="display-2 text-light mb-3 animated slideInDown">
                       Conoce mas sobre SYSEL PACKAGING
                     </h1>
-                    <a href="about.html" class="btn btn-primary py-3 px-5">Ler más...</a>
+                    <a href="about.html" class="btn btn-primary py-3 px-5">Leer más...</a>
                   </div>
                 </div>
               </div>
@@ -234,8 +234,9 @@
               <h1 class="display-1">01</h1>
               <h4 class="text-white mb-3">Caja carton corrugado</h4>
               <p class="text-white">
-                Aliqu diam amet diam et eos erat ipsum lorem stet lorem sit
-                clita duo justo erat amet
+                Fabricadas con cartón corrugado de alta resistencia, 
+                ideales para el transporte y almacenamiento de productos industriales y comerciales. 
+                Personalizables en tamaño y diseño.
               </p>
             </div>
           </div>
@@ -245,10 +246,10 @@
             <img class="img-fluid w-100" src="img/3.png" alt="" />
             <div class="facts-overlay">
               <h1 class="display-1">02</h1>
-              <h4 class="text-white mb-3">materiales de empaque</h4>
+              <h4 class="text-white mb-3">Materiales de empaque</h4>
               <p class="text-white">
-                Aliqu diam amet diam et eos erat ipsum lorem stet lorem sit
-                clita duo justo erat amet
+                Ofrecemos una amplia gama de materiales de empaque como flejes, cintas adhesivas, bolsas, esquineros, etc. 
+                Todo lo necesario para asegurar la integridad de tus productos durante el traslado y uso correspondiente.
               </p>
             </div>
           </div>
@@ -258,10 +259,10 @@
             <img class="img-fluid w-100" src="img//1.png" alt="" />
             <div class="facts-overlay">
               <h1 class="display-1">03</h1>
-              <h4 class="text-white mb-3">servicios de empaque</h4>
+              <h4 class="text-white mb-3">Servicios de empaque</h4>
               <p class="text-white">
-                Aliqu diam amet diam et eos erat ipsum lorem stet lorem sit
-                clita duo justo erat amet
+                Brindamos servicios de empaque industrial y personalizado directamente en tus instalaciones o en nuestras plantas. 
+                Optimizamos tus procesos logísticos con soluciones eficientes y a medida.
               </p>
             </div>
           </div>
@@ -288,13 +289,14 @@
             <div class="border-start border-5 border-primary ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2">¿Por qué elegirnos?</h6>
               <h1 class="display-6 mb-0">
-                Nuestra especialización son los paquetes.
+                Nos especializamos en soluciones de empaque eficientes y personalizadas
               </h1>
             </div>
             <p class="mb-5">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+              En Sysel Packaging ofrecemos empaques diseñados a la medida de tus necesidades. 
+              Ya sea para resguardar productos delicados o para optimizar tu logística, 
+              contamos con la experiencia y materiales para garantizar calidad, 
+              seguridad y eficiencia en cada envío.
             </p>
             <div class="row gy-5 gx-4">
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -302,10 +304,11 @@
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">Large number of services provided</h6>
+                  <h6 class="mb-0">Amplia gama de servicios especializados</h6>
                 </div>
                 <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
+                  >Ofrecemos soluciones integrales en empaque, materiales y logística, 
+                  adaptadas a las necesidades de cada cliente.</span
                 >
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
@@ -313,10 +316,11 @@
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">25+ years of professional experience</h6>
+                  <h6 class="mb-0">4 años de experiencia ofreciendo soluciones de empaque efectivas</h6>
                 </div>
                 <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
+                  >En poco tiempo, nos hemos consolidado como una empresa confiable, 
+                  brindando calidad, innovación y atención personalizada a cada cliente.</span
                 >
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
@@ -324,10 +328,11 @@
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">A large number of grateful customers</h6>
+                  <h6 class="mb-0">Una sólida base de clientes satisfechos</h6>
                 </div>
                 <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
+                  >Nuestra reputación se construye día a día gracias a la confianza y 
+                  satisfacción de cada cliente que elige nuestras soluciones de empaque.</span
                 >
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
@@ -335,10 +340,11 @@
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">Always reliable and affordable prices</h6>
+                  <h6 class="mb-0">>Precios competitivos y siempre confiables</h6>
                 </div>
                 <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
+                  >Ofrecemos soluciones de empaque de alta calidad a precios accesibles, 
+                  sin comprometer el servicio ni la eficiencia.</span
                 >
               </div>
             </div>
@@ -376,7 +382,7 @@
             <div class="border-start border-5 border-primary ps-4">
               <h6 class="text-body text-uppercase mb-2">Nuestros Servicios</h6>
               <h1 class="display-6 mb-0">
-                Hay un servicios para ti.
+                Hay soluciones para ti.
               </h1>
             </div>
           </div>
@@ -389,10 +395,11 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/1.png" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Caja corrugado</h5>
+                <h5 class="mb-3">Caja corrugada</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Las cajas corrugadas son ideales para el almacenamiento y transporte de productos sensibles. 
+                  Ofrecemos soluciones resistentes, ecológicas y personalizables,
+                  garantizando protección y seguridad para tus productos durante todo el proceso logístico.
                 </p>
               </div>
             </div>
@@ -403,8 +410,11 @@
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Materiales de Empaque</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Contamos con una amplia gama de materiales de empaque, 
+                  diseñados para ofrecer la máxima protección y eficiencia. 
+                  Desde materiales reciclables hasta opciones personalizadas, 
+                  cada uno está seleccionado para satisfacer las necesidades específicas de tus productos 
+                  y garantizar su seguridad en el transporte.
                 </p>
               </div>
             </div>
@@ -415,8 +425,10 @@
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Servicios de Empaque</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Ofrecemos servicios de empaque a medida, adaptados a las necesidades de tu negocio. 
+                  Desde empaque manual hasta automatizado, garantizamos rapidez, seguridad y 
+                  la mejor presentación para tus productos, asegurando que lleguen intactos y 
+                  listos para su distribución.
                 </p>
               </div>
             </div>
@@ -632,7 +644,7 @@
             <p>
               <i class="fa fa-map-marker-alt me-3"></i>Av Allende 6450, San Felipe, Torreón, Coah. C.P. 27085 
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+52 871-9423-418</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+52 871-942-3418</p>
             <p><i class="fa fa-envelope me-3"></i>jtlapanco@sysel.com.mx</p>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -665,16 +677,15 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-              &copy; SYSEL PACKAGING 2023 |<a href="http://pixelly.online/"> P I X E L L Y</a>, All Right Reserved.
+              &copy; 2025 SYSEL PACKAGING | Todos los derechos reservados.
             </div>
             <div class="col-md-6 text-center text-md-end">
-              Designed By 
-              <a href="https://htmlcodex.com">HTML Codex</a>
-              <br />Distributed By:
-              <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+              Diseñado por 
+              <a href="mailto:mosiah.villarreal2@outlook.com">Mosiah Villarreal</a>
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
     <!-- Footer End -->
