--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>SYSEL PACKAHING</title>
+    <title>SYSEL PACKAGING</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -57,7 +57,7 @@
           class="h-100 d-inline-flex align-items-center border-start border-end px-3"
         >
           <small class="fa fa-phone-alt me-2"></small>
-          <small>+52 87-1942-3418</small>
+          <small>+52 871-942-3418</small>
         </div>
         <div class="h-100 d-inline-flex align-items-center border-end px-3">
           <small class="far fa-envelope-open me-2"></small>
@@ -65,7 +65,7 @@
         </div>
         <div class="h-100 d-inline-flex align-items-center border-end px-3">
           <small class="far fa-clock me-2"></small>
-          <small>Lunes - Viernes: 09 AM - 18 PM</small>
+          <small>Lunes - Viernes: 07 AM - 15 PM</small>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
             <div class="border-start border-5 border-primary ps-4">
               <h6 class="text-body text-uppercase mb-2">Nuestros Servicios</h6>
               <h1 class="display-6 mb-0">
-                Hay un servicios para ti.
+                Hay soluciones para ti.
               </h1>
             </div>
           </div>
@@ -147,10 +147,11 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/1.png" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Caja corrugado</h5>
+                <h5 class="mb-3">Caja corrugadas</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Las cajas corrugadas son ideales para el almacenamiento y transporte de productos sensibles. 
+                  Ofrecemos soluciones resistentes, ecológicas y personalizables, 
+                  garantizando protección y seguridad para tus productos durante todo el proceso logístico.
                 </p>
               </div>
             </div>
@@ -161,8 +162,11 @@
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Materiales de Empaque</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Contamos con una amplia gama de materiales de empaque, 
+                  diseñados para ofrecer la máxima protección y eficiencia. 
+                  Desde materiales reciclables hasta opciones personalizadas, 
+                  cada uno está seleccionado para satisfacer las necesidades 
+                  específicas de tus productos y garantizar su seguridad en el transporte.
                 </p>
               </div>
             </div>
@@ -171,10 +175,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/4.png" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Servicios de Empaque</h5>
+                <h5 class="mb-3">Servicios de empaques</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Ofrecemos servicios de empaque a medida, adaptados a las necesidades de tu negocio. 
+                  Desde empaque manual hasta automatizado, garantizamos rapidez, seguridad y 
+                  la mejor presentación para tus productos, asegurando que lleguen intactos y 
+                  listos para su distribución.
                 </p>
               </div>
             </div>
@@ -291,7 +297,7 @@
             <p>
               <i class="fa fa-map-marker-alt me-3"></i>Av Allende 6450, San Felipe, Torreón, Coah. C.P. 27085 
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+52 871-9423-418</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+52 871-942-3418</p>
             <p><i class="fa fa-envelope me-3"></i>jtlapanco@sysel.com.mx</p>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -324,17 +330,15 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-              &copy; SYSEL PACKAGING 2023 |<a href="http://pixelly.online/"> P I X E L L Y</a>, All Right Reserved.
+              &copy; 2025 SYSEL PACKAGING | Todos los derechos reservados.
             </div>
             <div class="col-md-6 text-center text-md-end">
-              Designed By 
-              <a href="https://htmlcodex.com">HTML Codex</a>
-              <br />Distributed By:
-              <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+              Diseñado por 
+              <a href="mailto:mosiah.villarreal2@outlook.com">Mosiah Villarreal</a>
             </div>
           </div>
         </div>
-      </div>
+      </div>      
     </div>
     <!-- Footer End -->
 
