--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>SYSEL PACKAHING</title>
+    <title>SYSEL PACKAGING</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -57,7 +57,7 @@
             class="h-100 d-inline-flex align-items-center border-start border-end px-3"
           >
             <small class="fa fa-phone-alt me-2"></small>
-            <small>+52 87-1942-3418</small>
+            <small>+52 871-942-3418</small>
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-envelope-open me-2"></small>
@@ -65,7 +65,7 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Lunes - Viernes: 09 AM - 18 PM</small>
+            <small>Lunes - Viernes: 07 AM - 15 PM</small>
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
               <a class="text-white" href="index.html">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="contact.html"">contáctanos</a>
+              <a class="text-white" href="contact.html"">Contáctanos</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
               Conócenos
@@ -215,7 +215,7 @@
          <p>
            <i class="fa fa-map-marker-alt me-3"></i>Av Allende 6450, San Felipe, Torreón, Coah. C.P. 27085 
          </p>
-         <p><i class="fa fa-phone-alt me-3"></i>+52 871-9423-418</p>
+         <p><i class="fa fa-phone-alt me-3"></i>+52 871-942-3418</p>
          <p><i class="fa fa-envelope me-3"></i>jtlapanco@sysel.com.mx</p>
        </div>
        <div class="col-lg-3 col-md-6">
@@ -245,16 +245,14 @@
      </div>
    </div>
    <div class="container-fluid copyright">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-           &copy; SYSEL PACKAGING 2023 |<a href="http://pixelly.online/"> P I X E L L Y</a>, All Right Reserved.
-         </div>
-         <div class="col-md-6 text-center text-md-end">
-           Designed By 
-           <a href="https://htmlcodex.com">HTML Codex</a>
-           <br />Distributed By:
-           <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+          &copy; 2025 SYSEL PACKAGING. Todos los derechos reservados.
+        </div>
+        <div class="col-md-6 text-center text-md-end">
+          Desarrollado por <a href="mailto:mosiah.villarreal2@outlook.com">Mosiah Villarreal</a> | 
+          <a href="https://github.com/VILLA2elferoz" target="_blank">GitHub</a>
          </div>
        </div>
      </div>
